# ai-be-py

./: .env.example  .gitignore  CLAUDE.md  agent.md  pyproject.toml
backend/: config.py  main.py
backend/api/: deps.py  schemas.py
backend/api/routers/: ai_be_compat.py  auth.py  chat.py  chat_log_admin.py  health.py  input.py  order.py  oss.py  session.py  ship.py
backend/auth/: __init__.py  constants.py  deps.py  middleware.py  schemas.py  service.py
backend/infra/: db.py
backend/services/: chat_service.py  input_service.py  intent_pipeline_service.py  intent_service.py  oss_service.py
backend/tools/: order.py  registry.py  ship.py  weather.py
doc/: 03-模块设计.md  README.md
doc/AI-BE4J版本记录/: 01-项目对前端暴露的服务接口.md  03-AI-BE4J原始流程梳理.md  04-LangGraph设计.md
doc/总览/: 01-项目结构设计.md  02-项目简介.md
doc/样本集合/: 业务真实话术样本.md  场景强关键词.md
doc/模块设计/: 01-入口与编排.md  03-意图识别.md
doc/迁移阶段设计/: 01-第一阶段MVP技术方案.md  04-第二阶段技术方案.md  05-第三阶段技术方案.md  README.md
doc/问题样本/: 意图识别对话样本.md
doc/阶段设计/: 01-第一阶段MVP技术方案.md  02-第一阶段开发任务拆解.md  03-第一阶段接口与验收.md  README.md
tests/integration/: test_api.py
tests/unit/: test_auth_service.py  test_chat_log_repo.py  test_chat_message_repo.py  test_chat_service.py  test_chat_session_repo.py  test_observability.py  test_order_router.py  test_services_intent.py  test_session_store.py  test_ship_router.py  test_sys_user_repo.py  test_tools_registry.py
train/: README.md  __init__.py  common.py  slot_extractor.py
train/data/: clean_data.py
train/scripts/: __init__.py  data_diagnostics.py  evaluate.py  import_real_samples.py  preprocess.py  train.py
(+91 files in other folders)
